# DE-Zoomcamp

./: .dockerignore
.devcontainer/: devcontainer.json
Module1/: README.md  convert.py  pyproject.toml
Module1-GreenTaxi/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Module1-GreenTaxi/.devcontainer/: devcontainer.json
Module1-GreenTaxi/src/: db.py  ingest.py  pipeline.py
