[project]
name = "Module1-GreenTaxi"
version = "0.1.0"
description = "Containerized data engineering pipeline"
requires-python = ">=3.13"

dependencies = [
  "pandas",
  "pyarrow",
  "sqlalchemy",
  "psycopg2-binary",
]

[tool.uv]
# optional, but nice to be explicit
dev-dependencies = [
  "pytest",
  "ruff",
]
