[project]
name = "Module1-GreenTaxi"
version = "0.1.0"
description = "Containerized data engineering pipeline"
requires-python = ">=3.13"

dependencies = [
  "pandas",
  "pyarrow",
  "sqlalchemy",
  "psycopg2-binary",
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff",
    "black"
]
